Add back navigation and category lookup to item-details component

--- a/src/app/shared/components/item-details/item-details.component.html
+++ b/src/app/shared/components/item-details/item-details.component.html
@@ -1,13 +1,13 @@
 <div class="item-details_container" *ngIf="sideViewsService.itemDetails()">
   <div class="item-details_header">
-    <p-button [link]="true" icon="pi pi-arrow-left" />
+    <p-button [link]="true" icon="pi pi-arrow-left" (onClick)="backInView()"/>
     <span class="item-details_header-actions">
       <p-button [link]="true" icon="pi pi-trash" />
       <p-button [link]="true" icon="pi pi-pencil" />
     </span>
   </div>
   <div class="item-details_wrapper">
-    <img ngSrc="assets/images/shopping-list-illustration.png"
+    <img [ngSrc]="sideViewsService.itemDetails()?.imageURL ?? 'assets/images/shopping-list-illustration.png'"
          width="1024" height="1024" alt="item-img"/>
     <div class="item-info">
       <p class="item-info-label">
@@ -17,9 +17,9 @@
     </div>
     <div class="item-info">
       <p class="item-info-label">
-        categroy
+        category
       </p>
-      <p class="item-info-value">{{sideViewsService.itemDetails()?.category || '-'}}</p>
+      <p class="item-info-value">{{getItemCategoryName(sideViewsService.itemDetails()?.categoryId)}}</p>
     </div>
     <div class="item-info">
       <p class="item-info-label">
