Refactor shopping list and item card components

--- a/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
+++ b/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
@@ -1,4 +1,4 @@
-<div class="add-edit-item_container" *ngIf="categoriesList.length > 0">
+<div class="add-edit-item_container">
     <div class="add-edit-item_header">
       <p-button icon="pi pi-arrow-left"
                 [link]="true"
