--- a/src/app/shared/components/shopping-list/shopping-list.component.scss
+++ b/src/app/shared/components/shopping-list/shopping-list.component.scss
@@ -74,6 +74,10 @@
     &__items {
       width: 100%;
       height: 100%;
+      margin: 30px 0;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
     }
   }
   &_footer {
