--- a/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
+++ b/src/app/shared/components/add-edit-item-form/add-edit-item-form.component.html
@@ -3,7 +3,7 @@
       <p-button icon="pi pi-arrow-left"
                 [link]="true"
                 (onClick)="backInView()"></p-button>
-      <h3 class="add-edit-item_title">{{isEdit ? 'Edit item' : 'Add a new item'}}</h3>
+      <h3 class="add-edit-item_title">{{sideViewsService.isEditItemMode() ? 'Edit item' : 'Add a new item'}}</h3>
     </div>
 
   <form class="add-edit-item_form" [formGroup]="itemForm">
