--- a/src/app/shared/components/item-details/item-details.component.html
+++ b/src/app/shared/components/item-details/item-details.component.html
@@ -29,6 +29,6 @@
     </div>
   </div>
   <div class="item-details_actions">
-    <p-button label="Add to list" class="add-btn" (onClick)="addItemToList()"></p-button>
+    <p-button label="Add to list" class="add-btn" (onClick)="addItemToList(sideViewsService.itemDetails())"></p-button>
   </div>
 </div>
