--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,7 +7,7 @@
   --soft-accent-color: #f0aaa7; // previously --accent-color
   --light-blue: #cfe6e7; // remained the same as it is specific
   --mint-green-bg: #d1e8e2;
-
+  --primary-color: #10b981;
 }
 
 
