--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,8 +20,9 @@
 <!--    </div>-->
   </div>
   <div class="home-page_content">
+    <app-categories-list-carousel [categories]="categoriesList()" (categoryClicked)="getCategoryItems($event)"/>
     <app-items-list-section [itemBtnMode]="ITEM_CARD_MODES.ADD"
-                            [items]="itemService.groupedItems()"></app-items-list-section>
+                            [items]="itemsListByCategory()"></app-items-list-section>
   </div>
 
 </div>
