--- a/src/app/shared/components/items-list-section/items-list-section.component.html
+++ b/src/app/shared/components/items-list-section/items-list-section.component.html
@@ -1,9 +1,19 @@
 <div class="items-list-section">
-  <div class="items-category" *ngFor="let category of items;">
-    <h4 class="category-title">{{inHome ? category.categoryName[0] : category.categoryName}}</h4>
-    <div class="category-items-list" [ngClass]="{'in-list': itemBtnMode === ITEM_CARD_MODES.EDIT}">
-      <app-item-card *ngFor="let item of category.items"
-      [mode]="itemBtnMode" [item]="item"></app-item-card>
+  @for (item of items; track item.id) {
+    <div class="items-list-section__item">
+      <img class="items-list-section__item-img" [ngSrc]="item.imgUrl ?? ''" fill="fill" [alt]="item.name"/>
+      <span class="items-list-section__item-content">
+        <p class="items-list-section__item-name">{{item.name}}</p>
+        <p-button icon="pi pi-plus"
+                  styleClass="items-list-section__item-add-btn"/>
+      </span>
     </div>
-  </div>
+  }
+<!--  <div class="items-category" *ngFor="let category of items;">-->
+<!--    <h4 class="category-title">{{inHome ? category.categoryName[0] : category.categoryName}}</h4>-->
+<!--    <div class="category-items-list" [ngClass]="{'in-list': itemBtnMode === ITEM_CARD_MODES.EDIT}">-->
+<!--      <app-item-card *ngFor="let item of category.items"-->
+<!--      [mode]="itemBtnMode" [item]="item"></app-item-card>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
