--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -8,6 +8,13 @@
   --light-blue: #cfe6e7; // remained the same as it is specific
   --mint-green-bg: #d1e8e2;
   --primary-color: #10b981;
+  --main-color: #FF7F50;
+  --soft-yellow: #FFD700;
+  --fresh-green: #4CAF50;
+  --cool-blue: #4A90E2;
+  --white-bg: #ffffff;
+  --secondary-bg: #F5F5F5;
+  --text-color: #333333;
 }
 
 
