--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
 <!--    </div>-->
   </div>
   <div class="home-page_content">
-    <app-categories-list-carousel [categories]="categoriesList()" (categoryClicked)="getCategoryItems($event)"/>
+    <app-categories-list-carousel title="Explore Categories" [categories]="categoriesList()" (categoryClicked)="onCategoryChange($event)"/>
     <app-items-list-section [itemBtnMode]="ITEM_CARD_MODES.ADD"
                             [items]="itemsListByCategory()"></app-items-list-section>
   </div>
