--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -14,6 +14,7 @@
   --cool-blue: #4A90E2;
   --white-bg: #ffffff;
   --secondary-bg: #F5F5F5;
+  --cold-blue-bg: #EFF2FA;
   --text-color: #333333;
 }
 
