--- a/src/app/shared/components/shopping-list/shopping-list.component.html
+++ b/src/app/shared/components/shopping-list/shopping-list.component.html
@@ -1,42 +1,57 @@
-<div class="shopping-list_container">
-  <div class="shopping-list_add-item-card_wrapper">
-    <div class="shopping-list_add-item-card">
-      <img ngSrc="./assets/images/add-item-illustration.png" alt="add-item"
-           width="1024" height="1024"/>
-      <div class="shopping-list_add-item-card_content">
-        <p class="shopping-list_add-item-card_content-text">Didn’t find what you need?</p>
-        <p-button class="add-item-btn" label="Add item" (onClick)="navigateToAddingItemView()"></p-button>
-      </div>
+<div class="shopping-list_container p-3 h-full">
+  <h3 class="shopping-list_container-title">Shopping List title</h3>
+  <div class="shopping-list_container-items">
+    <div class="list-item w-full border-solid
+    flex justify-content-between align-items-center gap-1 px-1">
+      <img class="list-item_img" [ngSrc]="'https://firebasestorage.googleapis.com/v0/b/inbound-trilogy-292508.appspot.com/o/images%2FAsparagus_Iconic.jpg?alt=media&token=a129466b-5510-4629-867f-51c8f9c922af'"
+           fill="fill" [alt]="'test'"/>
+      <p class="list-item_name text-md">Tomato</p>
+      <span class="list-item_qty flex justify-content-between align-items-center gap-1">
+        <p-button [outlined]="true" icon="pi pi-minus" styleClass="qty_icon border-circle"/>
+        <span class="qty">1</span>
+        <p-button [outlined]="true" icon="pi pi-plus" styleClass="qty_icon border-circle"/>
+      </span>
+      <span class="list-item_price">123 EGP</span>
     </div>
   </div>
-  <ng-container *ngIf="shoppingList">
-    <div class="shopping-list_content">
-      <div class="shopping-list_content__title">
-        <input type="text" pInputText placeholder="Enter a list title" [formControl]="listTitle"/>
-        <button type="button" pButton
-                class="p-button-plain" icon="pi pi-pencil" (click)="onEditListTitle()" *ngIf="!isEditMode"></button>
-        <button type="button" pButton
-                class="p-button-plain" icon="pi pi-save" (click)="onChangeListTitle()" *ngIf="isEditMode"></button>
-      </div>
-     <ng-container *ngIf="shoppingList!.items">
-       <div class="shopping-list_content__items" *ngIf="shoppingList!.items as listItems">
-         <app-item-card *ngFor="let item of listItems"
-                        [mode]="ITEM_CARD_MODES.EDIT"
-                        [item]="item"
-                        (onRemoveItemFromList)="updateList($event)"
-                        (updateItemQuantity)="updateItemOnList($event)"></app-item-card>
-       </div>
-     </ng-container>
-    </div>
-    <div class="shopping-list_footer" *ngIf="shoppingList">
-      <p-button class="cancel-btn"
-                label="Cancel"
-                [link]="true" (onClick)="onCancelList(this.shoppingList)"></p-button>
-      <p-button class="complete-btn" label="Complete" (onClick)="onCompleteList(this.shoppingList)"></p-button>
-    </div>
-  </ng-container>
-  <div *ngIf="!shoppingList" class="shopping-list_empty">
-    <p class="shopping-list_empty-message">No items in the list</p>
-<!--    <img ngSrc="./assets/images/shopping-list-illustration.png" alt="empty-shopping-list" width="1024" height="1024"/>-->
-  </div>
+<!--  <div class="shopping-list_add-item-card_wrapper">-->
+<!--    <div class="shopping-list_add-item-card">-->
+<!--      <img ngSrc="./assets/images/add-item-illustration.png" alt="add-item"-->
+<!--           width="1024" height="1024"/>-->
+<!--      <div class="shopping-list_add-item-card_content">-->
+<!--        <p class="shopping-list_add-item-card_content-text">Didn’t find what you need?</p>-->
+<!--        <p-button class="add-item-btn" label="Add item" (onClick)="navigateToAddingItemView()"></p-button>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <ng-container *ngIf="shoppingList">-->
+<!--    <div class="shopping-list_content">-->
+<!--      <div class="shopping-list_content__title">-->
+<!--        <input type="text" pInputText placeholder="Enter a list title" [formControl]="listTitle"/>-->
+<!--        <button type="button" pButton-->
+<!--                class="p-button-plain" icon="pi pi-pencil" (click)="onEditListTitle()" *ngIf="!isEditMode"></button>-->
+<!--        <button type="button" pButton-->
+<!--                class="p-button-plain" icon="pi pi-save" (click)="onChangeListTitle()" *ngIf="isEditMode"></button>-->
+<!--      </div>-->
+<!--     <ng-container *ngIf="shoppingList!.items">-->
+<!--       <div class="shopping-list_content__items" *ngIf="shoppingList!.items as listItems">-->
+<!--         <app-item-card *ngFor="let item of listItems"-->
+<!--                        [mode]="ITEM_CARD_MODES.EDIT"-->
+<!--                        [item]="item"-->
+<!--                        (onRemoveItemFromList)="updateList($event)"-->
+<!--                        (updateItemQuantity)="updateItemOnList($event)"></app-item-card>-->
+<!--       </div>-->
+<!--     </ng-container>-->
+<!--    </div>-->
+<!--    <div class="shopping-list_footer" *ngIf="shoppingList">-->
+<!--      <p-button class="cancel-btn"-->
+<!--                label="Cancel"-->
+<!--                [link]="true" (onClick)="onCancelList(this.shoppingList)"></p-button>-->
+<!--      <p-button class="complete-btn" label="Complete" (onClick)="onCompleteList(this.shoppingList)"></p-button>-->
+<!--    </div>-->
+<!--  </ng-container>-->
+<!--  <div *ngIf="!shoppingList" class="shopping-list_empty">-->
+<!--    <p class="shopping-list_empty-message">No items in the list</p>-->
+<!--&lt;!&ndash;    <img ngSrc="./assets/images/shopping-list-illustration.png" alt="empty-shopping-list" width="1024" height="1024"/>&ndash;&gt;-->
+<!--  </div>-->
 </div>
