--- a/src/app/shared/components/side-view-container/side-view-container.component.html
+++ b/src/app/shared/components/side-view-container/side-view-container.component.html
@@ -1,14 +1,17 @@
-<div class="side-views-container">
- <ng-container [ngSwitch]="sideViewsService.currentView()">
-   <ng-template [ngSwitchCase]="SIDENAV_VIEWS.SHOPPING_LIST">
-     <app-shopping-list [shoppingList]="shoppingListService.currentShoppingList()"></app-shopping-list>
-   </ng-template>
-   <ng-template [ngSwitchCase]="SIDENAV_VIEWS.ADD_EDIT_ITEM">
-     <app-add-edit-item-form (onBackInView)="sideViewsService.updateCurrentSideView($event)"></app-add-edit-item-form>
-   </ng-template>
-   <ng-template [ngSwitchCase]="SIDENAV_VIEWS.ITEM_DETAILS">
-     <app-item-details (onBackInView)="sideViewsService.updateCurrentSideView($event)"
-     (onNavigateToEditView)="navigateToEditItemView($event)"></app-item-details>
-   </ng-template>
- </ng-container>
+<div class="side-views-container w-full h-full">
+  <div class="shopping-list h-full">
+    <app-shopping-list [shoppingList]="shoppingListService.currentShoppingList()"/>
+  </div>
+<!-- <ng-container [ngSwitch]="sideViewsService.currentView()">-->
+<!--   <ng-template [ngSwitchCase]="SIDENAV_VIEWS.SHOPPING_LIST">-->
+<!--     <app-shopping-list [shoppingList]="shoppingListService.currentShoppingList()"></app-shopping-list>-->
+<!--   </ng-template>-->
+<!--   <ng-template [ngSwitchCase]="SIDENAV_VIEWS.ADD_EDIT_ITEM">-->
+<!--     <app-add-edit-item-form (onBackInView)="sideViewsService.updateCurrentSideView($event)"></app-add-edit-item-form>-->
+<!--   </ng-template>-->
+<!--   <ng-template [ngSwitchCase]="SIDENAV_VIEWS.ITEM_DETAILS">-->
+<!--     <app-item-details (onBackInView)="sideViewsService.updateCurrentSideView($event)"-->
+<!--     (onNavigateToEditView)="navigateToEditItemView($event)"></app-item-details>-->
+<!--   </ng-template>-->
+<!-- </ng-container>-->
 </div>
