--- a/src/app/shared/components/side-view-container/side-view-container.component.scss
+++ b/src/app/shared/components/side-view-container/side-view-container.component.scss
@@ -1,6 +1,6 @@
-.side-views {
-  &-container {
-    width: 100%;
-    height: 100%;
-  }
-}
+//.side-views {
+//  &-container {
+//    width: 100%;
+//    height: 100%;
+//  }
+//}
