--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app-container">
   <router-outlet></router-outlet>
 </div>
-<app-app-loading></app-app-loading>
+<app-app-loading />
 <p-toast />
 
