--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -1,52 +1,59 @@
-.page-container {
-  display: flex;
-  gap: 50px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  height: 100%;
-  position: relative;
-  background-color: var(--surface-c);
-  .app-side-navigation-container {
-    width: 90px;
-    height: 100vh;
-    box-shadow: 0 0 10px 0 var(--subtle-color);
-    background-color: var(--bg-color);
-    position: fixed;
-    @media(max-width: 1200px) {
-      width: 70px;
-    }
-  }
-  .app-content-container {
-    width: 100%;
-    padding-right: 450px;
-    padding-left: 140px;
-    padding-bottom: 30px;
-    background-color: var(--surface-c);
-    height: fit-content;
-    overflow-y: auto;
-    @media(max-width: 1200px) {
-      padding-right: 40px;
-      padding-left: 110px;
-    }
-  }
-  .app-right-view-container {
-    border: 1px solid #355259;
-    width: 400px;
-    position: fixed;
-    top: 0;
-    transition: all 1s ease-in-out;
-    bottom: 0;
-    z-index: 2;
-    right: -100%;
-    background-color: var(--bg-color);
-    &.visible {
-      right: 0;
-      @media(max-width: 1200px) {
-        display:  block;
-      }
-    }
-    @media(max-width: 1200px) {
-      display: none;
-    }
+.layout-wrapper {
+  &__content {
+    width: calc(100vw - 400px);
+    margin-left: 5rem;
   }
 }
+
+//.page-container {
+//  display: flex;
+//  gap: 50px;
+//  overflow-x: hidden;
+//  overflow-y: auto;
+//  height: 100%;
+//  position: relative;
+//  background-color: var(--surface-c);
+//  .app-side-navigation-container {
+//    width: 90px;
+//    height: 100vh;
+//    box-shadow: 0 0 10px 0 var(--subtle-color);
+//    background-color: var(--bg-color);
+//    position: fixed;
+//    @media(max-width: 1200px) {
+//      width: 70px;
+//    }
+//  }
+//  .app-content-container {
+//    width: 100%;
+//    padding-right: 450px;
+//    padding-left: 140px;
+//    padding-bottom: 30px;
+//    background-color: var(--surface-c);
+//    height: fit-content;
+//    overflow-y: auto;
+//    @media(max-width: 1200px) {
+//      padding-right: 40px;
+//      padding-left: 110px;
+//    }
+//  }
+//  .app-right-view-container {
+//    border: 1px solid #355259;
+//    width: 400px;
+//    position: fixed;
+//    top: 0;
+//    transition: all 1s ease-in-out;
+//    bottom: 0;
+//    z-index: 2;
+//    right: -100%;
+//    background-color: var(--bg-color);
+//    &.visible {
+//      right: 0;
+//      @media(max-width: 1200px) {
+//        display:  block;
+//      }
+//    }
+//    @media(max-width: 1200px) {
+//      display: none;
+//    }
+//  }
+//}
