--- a/src/app/shared/components/side-navigation/side-navigation.component.scss
+++ b/src/app/shared/components/side-navigation/side-navigation.component.scss
@@ -1,93 +1,20 @@
 .side-navigation {
-  background-color: var(--bg-color);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-  gap: 100px;
-  padding: 10px;
-  &_logo {
-    width: 60px;
-    height: 60px;
-    @media(max-width: 1200px) {
-      width: 50px;
-      height: 50px;
-    }
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  &_links {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    height: 100%;
-    justify-content: center;
-    .link-item {
-      display: flex;
-      height: 45px;
-      ::ng-deep {
-        .p-button.p-button-link {
-          //color: var(--subtle-color);
-          &:hover {
-            color: var(--soft-accent-color);
-          }
-          &:focus {
-            box-shadow: none;
-            border: none;
-          }
-        }
-      }
-      .active-border {
-        display: inline-block;
-        width: 6px;
-        background-color: var(--soft-accent-color);
-        border-radius: 0 3px 3px 0;
-      }
-    }
-  }
-  &_actions-btn {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    ::ng-deep {
-      .p-badge {
-        transform: translate(40%, -40%);
-        background-color: var(--soft-accent-color);
-        @media(max-width: 1200px) {
-          width: 15px;
-        }
-      }
-    }
-    .list-btn {
-      border: none;
-      cursor: pointer;
-      border-radius: 50%;
-      width: 45px;
-      height: 45px;
-      background-color: var(--primary-color);
-      color: var(--bg-color);
+  &__content {}
+  &__menu-list {
+    li {
+      margin-bottom: 40px;
+      padding: 10px;
+      border-radius: 10px;
       &:hover {
-        background-color: var(--text-color-green);
-      }
-      @media(max-width: 1200px) {
-        width: 40px;
-        height: 40px;
-      }
-    }
-    .logout-btn {
-      border: none;
-      cursor: pointer;
-      border-radius: 50%;
-      width: 45px;
-      height: 45px;
-      color: var(--primary-color);
-      @media(max-width: 1200px) {
-        width: 40px;
-        height: 40px;
+        background: #add8e66e;
       }
     }
   }
-
+}
+::ng-deep {
+  .side-navigation {
+    &.p-sidebar {
+      //background: rgba(9, 121, 122, 0.1) !important;
+    }
+  }
 }
