--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,33 @@
-<p>Hii</p>
+<div class="home-page">
+  <div class="home-page__header flex align-items-center justify-content-between flex-wrap">
+    <h2 class="w-fit">Listify</h2>
+    <p-inputGroup styleClass="w-20rem search-input">
+      <p-inputGroupAddon styleClass="bg-transparent">
+        <i class="pi pi-search"></i>
+      </p-inputGroupAddon>
+      <input pInputText placeholder="Search for items" />
+    </p-inputGroup>
+  </div>
+
+  <div class="home-page__content pt-8">
+    <div class="home-page__categories-list">
+      <h3 class="mb-3 pl-1">Explore categories</h3>
+     <p-carousel [value]="categoriesList() ?? []"
+                 [numVisible]="6"
+                 [numScroll]="3"
+                 [circular]="false"
+                 [showIndicators]="false"
+     [responsiveOptions]="responsiveOptions">
+       <ng-template let-category pTemplate="item">
+         <app-home-category-card [category]="category" (onCategorySelected)="onSelectCategoryItem($event)"/>
+       </ng-template>
+
+     </p-carousel>
+    </div>
+    <div class="home-page__items-list mt-8 flex gap-4 px-1 flex-wrap">
+      @for(item of itemsList(); track item.id) {
+        <app-home-item-card [item]="item"/>
+      }
+    </div>
+  </div>
+</div>
