--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -3,7 +3,7 @@
     <app-side-navigation/>
   </div>
   <div class="layout-wrapper__content min-h-screen h-full">
-    <p-button (onClick)="toggleSideNavigation()" icon="pi pi-plus" />
+    <router-outlet/>
   </div>
   <div class="layout-wrapper__side-shopping-list w-20rem h-screen border-solid fixed top-0 bottom-0 right-0"></div>
 </div>
